Upgrade Java version to 21 LTS