@@ -155,7 +155,7 @@ public class JavaBindingGenerator extends ModelBindingGenerator {
             if (msg != null) {
                 List parts = msg.getOrderedParts(null);
                 if (parts.size() > 0) {
-                    Part part = (Part) parts.get(0);
+                    Part part = (Part) parts.getFirst();
                     String partName = part.getName();
                     javaOp.setReturnPart(partName);
                 }
